changed table div

--- a/index.html
+++ b/index.html
@@ -116,87 +116,87 @@
 				</a>
 			</h2>
 	
-<table id="ChemTest1" class="table">
-<tr><th colspan="2">Chemical Testing Services Location 1</th></tr>
-<tr class="heading"><td>Critical Limits</td><td>Test Results</td></tr>
-<tr><td>Pool Chlorine (1-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
-<tr><td>Spa Chlorine (2-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
-<tr><td>Pool Bromine (2-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
-<tr><td>Spa Bromine (3-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
-<tr><td>PH (7.2 - 7.6) - Acid Level</td><td><input type="text"/></td></tr>
-<tr><td>Total Alkalinity (80 - 120 ppm)</td><td><input type="text"/></td></tr>
-<tr><td>Calcium Hardness (200 - 400 ppm)</td><td><input type="text"/></td></tr>
-<tr><td>CYA/UV Stabilizer</td><td><input type="text"/></td></tr>
-<tr><td>Pool Salt (2800 - 3500 ppm)</td><td><input type="text"/></td></tr>
-</table>
+		<table id="ChemTest1" class="table">
+		<tr><th colspan="2">Chemical Testing Services Location 1</th></tr>
+		<tr class="heading"><td>Critical Limits</td><td>Test Results</td></tr>
+		<tr><td>Pool Chlorine (1-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
+		<tr><td>Spa Chlorine (2-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
+		<tr><td>Pool Bromine (2-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
+		<tr><td>Spa Bromine (3-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
+		<tr><td>PH (7.2 - 7.6) - Acid Level</td><td><input type="text"/></td></tr>
+		<tr><td>Total Alkalinity (80 - 120 ppm)</td><td><input type="text"/></td></tr>
+		<tr><td>Calcium Hardness (200 - 400 ppm)</td><td><input type="text"/></td></tr>
+		<tr><td>CYA/UV Stabilizer</td><td><input type="text"/></td></tr>
+		<tr><td>Pool Salt (2800 - 3500 ppm)</td><td><input type="text"/></td></tr>
+		</table>
 
-<table id="ChemTest2" class="table">
-<tr><th colspan="2">Chemical Testing Services Location 2</th></tr>
-<tr class="heading"><td>Critical Limits</td><td>Test Results</td></tr>
-<tr><td>Pool Chlorine (1-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
-<tr><td>Spa Chlorine (2-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
-<tr><td>Pool Bromine (2-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
-<tr><td>Spa Bromine (3-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
-<tr><td>PH (7.2 - 7.6) - Acid Level</td><td><input type="text"/></td></tr>
-<tr><td>Total Alkalinity (80 - 120 ppm)</td><td><input type="text"/></td></tr>
-<tr><td>Calcium Hardness (200 - 400 ppm)</td><td><input type="text"/></td></tr>
-<tr><td>CYA/UV Stabilizer</td><td><input type="text"/></td></tr>
-<tr><td>Pool Salt (2800 - 3500 ppm)</td><td><input type="text"/></td></tr>
-</table>
-
-
-<table id="ChemDel" class="table">
-<tr><th colspan="5" >Chemical Delivery</th>
-<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Delivered</td><td colspan="2">Treatment Services</td></tr>
-<tr class="heading"><td></td><td>#1</td><td>#2</td><td>#1</td><td>#2</td></tr>
-<tr><td>Chlorine Sticks - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Liquid Chlorine - gallons</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Bromine Tabs - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Muriatic Acid - gallons (pH down)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Soda Ash - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Shock - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Bicarbonate of Soda - lbs. (alklanity up)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>DE - lbs. (filtering agent)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Algaecide - qt.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Sequestering Agent - qt.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Enzyme- qt. (tile scum line remover)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>CYA/UV Stabilizer - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Pool Salt - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<th colspan="5">Special Chemicals</th>
-<tr><td><input type="text" style="width:175px; float:left;"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
-<tr><td><input type="text" style="width:175px; float:left;"/><td><input type="text"/></td></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
-<tr><td><input type="text" style="width:175px; float:left;"/><td><input type="text"/></td></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
-</table>
+		<table id="ChemTest2" class="table">
+		<tr><th colspan="2">Chemical Testing Services Location 2</th></tr>
+		<tr class="heading"><td>Critical Limits</td><td>Test Results</td></tr>
+		<tr><td>Pool Chlorine (1-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
+		<tr><td>Spa Chlorine (2-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
+		<tr><td>Pool Bromine (2-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
+		<tr><td>Spa Bromine (3-10 ppm) - Disinfectant</td><td><input type="text"/></td></tr>
+		<tr><td>PH (7.2 - 7.6) - Acid Level</td><td><input type="text"/></td></tr>
+		<tr><td>Total Alkalinity (80 - 120 ppm)</td><td><input type="text"/></td></tr>
+		<tr><td>Calcium Hardness (200 - 400 ppm)</td><td><input type="text"/></td></tr>
+		<tr><td>CYA/UV Stabilizer</td><td><input type="text"/></td></tr>
+		<tr><td>Pool Salt (2800 - 3500 ppm)</td><td><input type="text"/></td></tr>
+		</table>
 
 
+		<table id="ChemDel" class="table">
+		<tr><th colspan="5" >Chemical Delivery</th>
+		<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Delivered</td><td colspan="2">Treatment Services</td></tr>
+		<tr class="heading"><td></td><td>#1</td><td>#2</td><td>#1</td><td>#2</td></tr>
+		<tr><td>Chlorine Sticks - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Liquid Chlorine - gallons</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Bromine Tabs - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Muriatic Acid - gallons (pH down)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Soda Ash - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Shock - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Bicarbonate of Soda - lbs. (alklanity up)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>DE - lbs. (filtering agent)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Algaecide - qt.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Sequestering Agent - qt.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Enzyme- qt. (tile scum line remover)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>CYA/UV Stabilizer - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Pool Salt - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<th colspan="5">Special Chemicals</th>
+		<tr><td><input type="text" style="width:175px; float:left;"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
+		<tr><td><input type="text" style="width:175px; float:left;"/><td><input type="text"/></td></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
+		<tr><td><input type="text" style="width:175px; float:left;"/><td><input type="text"/></td></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
+		</table>
 
-<table id="Clean" class="table">
-<tr><th colspan="3">Cleaning Services</th></tr>
-<tr class="heading"><td>Cleaning Services</td><td>#1</td><td>#2</td></tr>
-<tr><td>Vacuum: <input type="checkbox"/> Power &nbsp; <input type="checkbox"/>Hand  </td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Clean: Tile at Water Line</td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Brush: <input type="checkbox"/> Steps &nbsp; <input type="checkbox"/> Wall &nbsp; <input type="checkbox"/> Floor </td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Clean: <input type="checkbox"/> Skimmer &nbsp; <input type="checkbox"/>Basket &nbsp; <input type="checkbox"/> Gutter </td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Clean: <input type="checkbox"/> Polaris Bag &nbsp; <input type="checkbox"/> Vac Canister &nbsp; </td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Leaf Net: <input type="checkbox"/> Pool Surface &nbsp; <input type="checkbox"/> Floor &nbsp; </td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Clean: <input type="checkbox"/> Spa &nbsp; <input type="checkbox"/> Fountain &nbsp; <input type="checkbox"/> Feature  </td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Pump Station Basket</td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Clean: <input type="checkbox"/> Filter &nbsp; <input type="checkbox"/> Bump &nbsp; <input type="checkbox"/> Acid Wash  </td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Vacuum to Waste w/ On-Deck Pump</td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td>Extra: <input type="checkbox"/> Fecal &nbsp; <input type="checkbox"/> Vandalism &nbsp; <input type="checkbox"/> Storm </td><td><input type="text"/></td><td><input type="text"/></td></tr>
-</table>
 
-<table id="Calibration" class="table">
-<th colspan="3">Calibration and Monitor Services</th>
-<tr class="heading"><td>Equipment Services</td><td>#1</td><td>#2</td></tr>
-<tr><td><strong>Inspect:</strong> Pumps, Motors, Gauges, Filters</td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td><strong>Adjust:</strong> Flow Control Valves / Clocks</td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><td><strong>Calibrate:</strong> Automatic Control Systems</td><td><input type="text"/></td><td><input type="text"/></td></tr>
-<tr><th colspan="3">Replaced Small Parts</th></tr>
-<tr><td><input type="text" style="width:300px; float:left;"/></td><td><input type="text" /></td><td><input type="text"/></td></tr>
-<tr><td><input type="text" style="width:300px; float:left;"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-</table>
 
+		<table id="Clean" class="table">
+		<tr><th colspan="3">Cleaning Services</th></tr>
+		<tr class="heading"><td>Cleaning Services</td><td>#1</td><td>#2</td></tr>
+		<tr><td>Vacuum: <input type="checkbox"/> Power &nbsp; <input type="checkbox"/>Hand  </td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Clean: Tile at Water Line</td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Brush: <input type="checkbox"/> Steps &nbsp; <input type="checkbox"/> Wall &nbsp; <input type="checkbox"/> Floor </td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Clean: <input type="checkbox"/> Skimmer &nbsp; <input type="checkbox"/>Basket &nbsp; <input type="checkbox"/> Gutter </td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Clean: <input type="checkbox"/> Polaris Bag &nbsp; <input type="checkbox"/> Vac Canister &nbsp; </td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Leaf Net: <input type="checkbox"/> Pool Surface &nbsp; <input type="checkbox"/> Floor &nbsp; </td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Clean: <input type="checkbox"/> Spa &nbsp; <input type="checkbox"/> Fountain &nbsp; <input type="checkbox"/> Feature  </td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Pump Station Basket</td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Clean: <input type="checkbox"/> Filter &nbsp; <input type="checkbox"/> Bump &nbsp; <input type="checkbox"/> Acid Wash  </td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Vacuum to Waste w/ On-Deck Pump</td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Extra: <input type="checkbox"/> Fecal &nbsp; <input type="checkbox"/> Vandalism &nbsp; <input type="checkbox"/> Storm </td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		</table>
+
+		<table id="Calibration" class="table">
+		<th colspan="3">Calibration and Monitor Services</th>
+		<tr class="heading"><td>Equipment Services</td><td>#1</td><td>#2</td></tr>
+		<tr><td><strong>Inspect:</strong> Pumps, Motors, Gauges, Filters</td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td><strong>Adjust:</strong> Flow Control Valves / Clocks</td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td><strong>Calibrate:</strong> Automatic Control Systems</td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><th colspan="3">Replaced Small Parts</th></tr>
+		<tr><td><input type="text" style="width:300px; float:left;"/></td><td><input type="text" /></td><td><input type="text"/></td></tr>
+		<tr><td><input type="text" style="width:300px; float:left;"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		</table>
+</div>
 
 
 
