--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 				<img src="img/arrow-top.png">
 				</a>
 			</h2>
+		</div>
 	
 		<table id="ChemTest1" class="table">
 		<tr><th colspan="2">Chemical Testing Services Location 1</th></tr>
@@ -143,33 +144,7 @@
 		<tr><td>CYA/UV Stabilizer</td><td><input type="text"/></td></tr>
 		<tr><td>Pool Salt (2800 - 3500 ppm)</td><td><input type="text"/></td></tr>
 		</table>
-
-
-		<table id="ChemDel" class="table">
-		<tr><th colspan="5" >Chemical Delivery</th>
-		<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Delivered</td><td colspan="2">Treatment Services</td></tr>
-		<tr class="heading"><td></td><td>#1</td><td>#2</td><td>#1</td><td>#2</td></tr>
-		<tr><td>Chlorine Sticks - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Liquid Chlorine - gallons</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Bromine Tabs - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Muriatic Acid - gallons (pH down)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Soda Ash - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Shock - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Bicarbonate of Soda - lbs. (alklanity up)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>DE - lbs. (filtering agent)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Algaecide - qt.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Sequestering Agent - qt.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Enzyme- qt. (tile scum line remover)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>CYA/UV Stabilizer - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<tr><td>Pool Salt - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-		<th colspan="5">Special Chemicals</th>
-		<tr><td><input type="text" style="width:175px; float:left;"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
-		<tr><td><input type="text" style="width:175px; float:left;"/><td><input type="text"/></td></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
-		<tr><td><input type="text" style="width:175px; float:left;"/><td><input type="text"/></td></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
-		</table>
-
-
-
+		
 		<table id="Clean" class="table">
 		<tr><th colspan="3">Cleaning Services</th></tr>
 		<tr class="heading"><td>Cleaning Services</td><td>#1</td><td>#2</td></tr>
@@ -187,7 +162,7 @@
 		</table>
 
 		<table id="Calibration" class="table">
-		<th colspan="3">Calibration and Monitor Services</th>
+		<tr><th colspan="3">Calibration and Monitor Services</th></tr>
 		<tr class="heading"><td>Equipment Services</td><td>#1</td><td>#2</td></tr>
 		<tr><td><strong>Inspect:</strong> Pumps, Motors, Gauges, Filters</td><td><input type="text"/></td><td><input type="text"/></td></tr>
 		<tr><td><strong>Adjust:</strong> Flow Control Valves / Clocks</td><td><input type="text"/></td><td><input type="text"/></td></tr>
@@ -196,11 +171,41 @@
 		<tr><td><input type="text" style="width:300px; float:left;"/></td><td><input type="text" /></td><td><input type="text"/></td></tr>
 		<tr><td><input type="text" style="width:300px; float:left;"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
 		</table>
+
+
+
+		<table id="ChemDel" class="table">
+		<tr><th colspan="5" >Chemical Delivery</th></tr>
+		<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Delivered</td><td colspan="2">Treatment Services</td></tr>
+		<tr class="heading"><td></td><td>#1</td><td>#2</td><td>#1</td><td>#2</td></tr>
+		<tr><td>Chlorine Sticks - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Liquid Chlorine - gallons</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Bromine Tabs - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Muriatic Acid - gallons (pH down)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Soda Ash - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Shock - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Bicarbonate of Soda - lbs. (alklanity up)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>DE - lbs. (filtering agent)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Algaecide - qt.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Sequestering Agent - qt.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Enzyme- qt. (tile scum line remover)</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>CYA/UV Stabilizer - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><td>Pool Salt - lbs.</td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
+		<tr><th colspan="5" class="heading">Special Chemicals</th></tr>
+		<tr><td><input type="text" style="width:175px; float:left;"/></td><td><input type="text"/></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
+		<tr><td><input type="text" style="width:175px; float:left;"/><td><input type="text"/></td></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
+		<tr><td><input type="text" style="width:175px; float:left;"/><td><input type="text"/></td></td><td><input type="text"/></td><td><input type="text"/><td><input type="text"/></td></tr>
+		</table>
+
+
+
+		
+
+
+</div>
+</div>
 </div>
 
-
-
-</div>
 <div class="container"  id="inventory">
 		
 		<h2 class="page-title" id="scroll_up">
@@ -211,24 +216,24 @@
 			</h2>
 		
 <p>The driver will have the opportunity to review the inventory that is being supplied to him</p>
-<table id="ChemDel" class="table">
-<tr><th colspan="5" >Chemical Delivery</th>
-<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Supplied</td></tr>
-<tr><td>Chlorine Sticks - lbs.</td><td>Data From Dock</td></tr>
-<tr><td>Liquid Chlorine - gallons</td><td>Data From Dock</td></tr>
-<tr><td>Bromine Tabs - lbs.</td><td>Data From Dock</td></tr>
-<tr><td>Muriatic Acid - gallons (pH down)</td><td>Data From Dock</td></tr>
-<tr><td>Soda Ash - lbs.</td><td>Data From Dock</td></tr>
-<tr><td>Shock - lbs.</td><td>Data From Dock</td></tr>
-<tr><td>Bicarbonate of Soda - lbs. (alklanity up)</td><td>Data From Dock</td></tr>
-<tr><td>DE - lbs. (filtering agent)</td><td>Data From Dock</td></tr>
-<tr><td>Algaecide - qt.</td><td>Data From Dock</td></tr>
-<tr><td>Sequestering Agent - qt.</td><td>Data From Dock</td></tr>
-<tr><td>Enzyme- qt. (tile scum line remover)</td><td>Data From Dock</td></tr>
-<tr><td>CYA/UV Stabilizer - lbs.</td><td>Data From Dock</td></tr>
-<tr><td>Pool Salt - lbs.</td><td>Data From Dock</td></tr>
+<table id="ChemInv" class="table">
+<tr><th colspan="5" >Chemicals Supplied to Driver</th>
+<tr class="heading"><td>Chemicals</td><td>Quantity Supplied</td><td>Accept</td><td>Deny</td></tr>
+<tr><td>Chlorine Sticks - lbs.</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Liquid Chlorine - gallons</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Bromine Tabs - lbs.</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Muriatic Acid - gallons (pH down)</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Soda Ash - lbs.</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Shock - lbs.</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Bicarbonate of Soda - lbs. (alklanity up)</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>DE - lbs. (filtering agent)</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Algaecide - qt.</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Sequestering Agent - qt.</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Enzyme- qt. (tile scum line remover)</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>CYA/UV Stabilizer - lbs.</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
+<tr><td>Pool Salt - lbs.</td><td>Data From Dock</td><td><input type="checkbox" id="yes1">Yes</td><td><input type="checkbox">No</td></tr>
 </table>
-<input type="button" value="Accept Supply Load" class="btn"/>
+<input type="button" value="Accept All" id="selectAll" class="btn" onclick="checkYes()"/>
 <input type="button" value="Request Recount" class="btn"/>
 </div>
 <div class="container"  id="invoice">
@@ -252,6 +257,16 @@
 <script src="fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
 <script src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 <script src="js/init.js"></script>
-
+<script type="javascript">
+function checkYes()
+{
+		
+		$('#selectAll').click(function(e){
+	var table= $(e.target).closest('table');
+	$('td input:checkbox',table).attr('checked',e.target.checked);
+});
+                
+}
+</script>
 </body>
 </html>
