--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		</table>
 
 
-
+<div calss="span5">
 		<table id="ChemDel" class="table">
 		<tr><th colspan="5" >Chemical Delivery</th></tr>
 		<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Delivered</td><td colspan="2">Treatment Services</td></tr>
@@ -198,7 +198,7 @@
 		</table>
 
 
-
+</div>
 		
 
 
