--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 		</table>
 
 
-<div calss="span5">
-		<table id="ChemDel" class="table">
+
+		<table id="ChemDel" class="table span9">
 		<tr><th colspan="5" >Chemical Delivery</th></tr>
 		<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Delivered</td><td colspan="2">Treatment Services</td></tr>
 		<tr class="heading"><td></td><td>#1</td><td>#2</td><td>#1</td><td>#2</td></tr>
@@ -198,7 +198,7 @@
 		</table>
 
 
-</div>
+
 		
 
 
