--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 <link href='http://fonts.googleapis.com/css?family=Exo:400,800' rel='stylesheet' type='text/css'>
-<!-- 
- <link rel="stylesheet" type="text/css" href="css/styles.css"/>
- <link rel="stylesheet" type="text/css" href="~css/bootstrap.min.css"/>
- <link rel="stylesheet" type="text/css" href="~css/bootstrap-responsive.css"/>
- <link rel="stylesheet" type="text/css" href="~css/media-queries.css"/>
- --></head>
-<body>
+</head>
+<body data-spy="scroll">
+
 <div class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
@@ -174,7 +170,7 @@
 
 
 
-		<table id="ChemDel" class="table span9">
+		<table id="ChemDel" class="table span6">
 		<tr><th colspan="5" >Chemical Delivery</th></tr>
 		<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Delivered</td><td colspan="2">Treatment Services</td></tr>
 		<tr class="heading"><td></td><td>#1</td><td>#2</td><td>#1</td><td>#2</td></tr>
