--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 
 
-		<table id="ChemDel" class="table span6">
+		<table id="ChemDel" class="table extrawide">
 		<tr><th colspan="5" >Chemical Delivery</th></tr>
 		<tr class="heading"><td>Chemicals</td><td colspan="2">Quantity Delivered</td><td colspan="2">Treatment Services</td></tr>
 		<tr class="heading"><td></td><td>#1</td><td>#2</td><td>#1</td><td>#2</td></tr>
