--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		
 			<div class="nav-collapse collapse">
 				<ul id="nav-list" class="nav pull-right">
+					<li><a href="#login">Route Login</a></li>
 					<li><a href="#home">Customer Information</a></li>
 					<li><a href="#service">Service Tables</a></li>
 					<li><a href="#inventory">Inventory</a></li>
@@ -46,18 +47,33 @@
 <form>
 <img src="logo.png" alt="logo" class="logo"/>
 <hr/>
+<div class="container" id="login">
+	<h3>Driver Id</h3>
+	<select class="short">
+	<option id="1">1</option>
+	<option id="2">2</option>
+	<option id="3">3</option>
+	<option id="4">4</option>
+	<option id="5">5</option>
+	</select>
+	<h3>Password</h3>
+	<input id="password" type="text" class="pwdInput"/><br/><br/>
+	
+	<input type="button" id="login" value="Login" class="btn"/><br/>
+</div>
+<hr/>
 <div class="container" id="home">
 	<div>
 		
-		<h3>Date of visit</h3><input type="date" /><br/>
-		<h3>Time Visit Completed</h3><input type="time"/><br/>
+		<h3>Date of visit</h3><input id="visitDate" type="date" /><br/>
+		<h3>Time Visit Completed</h3><input id="timeComplete" type="time"/><br/>
 		<h3>Customer</h3>
-		<select>
-		<option>Conner Lane</option>
-		<option>Oakwood Drive</option>
-		<option>Eaton Avenue</option>
-		<option>Tidewater Circle</option>
-		<option>Johston Avenue</option>
+		<select id="customer">
+		<option id="6">Conner Lane</option>
+		<option id="7">Oakwood Drive</option>
+		<option id="8">Eaton Avenue</option>
+		<option id="9">Tidewater Circle</option>
+		<option id="10">Johston Avenue</option>
 		</select>
 		<br/>
 		<input type="checkbox" value="extra"/>Extra Visit ($)<input type="number"/><br/>
